@@ -2,11 +2,13 @@ package controllers;
 
 import client.Client;
 import common.ClientProfile;
+import guiElements.BubbleInGoing;
 import guiElements.BubbleOutGoing;
 import guiElements.HBoxChat;
 import guiElements.HBoxUser;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
+import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.ListView;
 import javafx.scene.control.TextField;
@@ -14,11 +16,10 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import messageDTO.Message;
 import messageDTO.requests.VerbalMessageRequest;
+import messageDTO.respons.VerbalMessageResponse;
 
 import java.util.List;
-import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 
 public class ClientController {
@@ -29,18 +30,28 @@ public class ClientController {
     public TextField input;
     public ListView<HBoxUser> listUsers;
     public ListView<HBoxChat> listDialog;
-
+    public ImageView sendImage;
+    public Button exitButton;
+    public ImageView exitImage;
     private Client client;
 
     public void setClient(Client client) {
         this.client = client;
     }
 
+    public void setNameLabel(String name) {
+        Platform.runLater(() -> nameLabel.setText(name));
+    }
+
+    public void setUserAva(Image ava) {
+        Platform.runLater(() -> userAva.setImage(ava));
+    }
+
     public void send() {
-        System.out.println(input.getText());
         Label bubbleOut = new BubbleOutGoing(input.getText());
-        HBoxChat hBoxChat = new HBoxChat(bubbleOut);
+        HBoxChat hBoxChat = new HBoxChat(bubbleOut, client.getClientProfile().getAvatar());
         Message message = new VerbalMessageRequest(input.getText(), client.getClientProfile());
+        input.clear();
         client.sendMsg(message);
         Platform.runLater(() -> {
             listDialog.getItems().add(hBoxChat);
@@ -53,20 +64,38 @@ public class ClientController {
                         clientProfile.getAvatar());
         List<HBoxUser> hBoxUsers = listProfiles.stream()
                 .filter(clientProfile -> !clientProfile.getName().equals(client.getClientProfile().getName()))
-                .map(createHBoxUserFunction)
-                .collect(Collectors.toList());
+                .map(createHBoxUserFunction).toList();
         Platform.runLater(() -> {
             listUsers.getItems().clear();
             listUsers.getItems().addAll(hBoxUsers);
         });
     }
 
-    public void setNameLabel(String name) {
-        Platform.runLater(() -> nameLabel.setText(name));
+    public void updateListDialog(List<VerbalMessageResponse> verbalMessageResponseList) {
+        List<HBoxChat> hBoxChats = verbalMessageResponseList.stream().map(verbalMessageResponse -> {
+            String message = verbalMessageResponse.getMessage();
+            ClientProfile clientProfile = verbalMessageResponse.getClientProfile();
+            Label label;
+            if (clientProfile.getName().equals(client.getClientProfile().getName())) {
+                label = new BubbleOutGoing(message);
+            } else {
+                label = new BubbleInGoing(message);
+            }
+            return new HBoxChat(label, clientProfile.getAvatar());
+        }).toList();
+        Platform.runLater(() -> listDialog.getItems().addAll(hBoxChats));
     }
 
-    public void setUserAva(Image ava) {
-        Platform.runLater(() -> userAva.setImage(ava));
+    public void addToListDialog(String msg, byte[] image) {
+        BubbleInGoing bubbleInGoing = new BubbleInGoing(msg);
+        HBoxChat hBoxChat = new HBoxChat(bubbleInGoing, image);
+        Platform.runLater(() -> listDialog.getItems().add(hBoxChat));
+    }
+
+    public void exitClient() {
+        client.setEmergencyExit(false);
+        client.closeConnect();
+        client.getClientStage().close();
     }
 
     public void addUserToList(HBoxUser hBoxUser) {
